# AUV_and_base

./: README.md
auv/devel/: .catkin  .rosinstall
auv/devel/lib/pkgconfig/: pose.pc  vision.pc  yolo.pc
auv/devel/share/pose/cmake/: poseConfig.cmake
auv/devel/share/vision/cmake/: visionConfig.cmake
auv/devel/share/yolo/cmake/: yoloConfig.cmake
auv/src/AUV_navigator/: CMakeLists.txt
auv/src/AUV_navigator/scripts/: fix.py  mav_control.py  mavros_test.py  take_photos.py
auv/src/AUV_navigator/src/: ControlTask.cpp  task.h  task2.cpp  task3.cpp  task4.cpp
auv/src/eco_track/: CMakeLists.txt  package.xml
auv/src/eco_track/launch/: track.launch
auv/src/eco_track/scripts/: eco_tracker_node.cpp
auv/src/keyboard_control/: CMakeLists.txt  package.xml
auv/src/keyboard_control/scripts/: keyboard_teleop.py
auv/src/mav_control/: CMakeLists.txt  package.xml
auv/src/mav_control/launch/: mav_control.launch
auv/src/mav_control/scripts/: mav_node.py
auv/src/mav_control/src/: __init__.py  control.py  mav_controller.py
auv/src/vision/: CMakeLists.txt
auv/src/vision/src/scripts/: camera_info.yaml  color.py  tag0_area_log.csv  tag_detector.py  tube_detector.py
auv/src/yolo/: CMakeLists.txt  package.xml
auv/src/yolo/model/yolo11n_light_rknn_model/: metadata.yaml
auv/src/yolo/scripts/: yolo_camera.py
base_station/: base_station.py
